Integrate profile provider into list

--- a/HearthisAt-Player/Resource/Base.lproj/Localizable.strings
+++ b/HearthisAt-Player/Resource/Base.lproj/Localizable.strings
@@ -7,3 +7,5 @@
 */
 
 "screen.feed.title" = "Top Track Artists";
+"screen.feed.cell.profiledetails.loading" = "Loading details...";
+"screen.feed.cell.profiledetails.unavailable" = "Details Unavailable";
